--- a/src/index.css
+++ b/src/index.css
@@ -86,3 +86,16 @@
 .-rotate-360 {
   @apply rotate-[-360deg];
 }
+
+.icon-rotate {
+  animation: rotate-animation 6s linear infinite;
+}
+
+@keyframes rotate-animation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
