--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,15 @@
 * {
   scroll-behavior: smooth;
 }
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+
+::-webkit-scrollbar-thumb {
+  background: #F0DB4F; 
+  border-radius: 2px;
+}
 
 @layer base {
   body {
